Add admin dashboard from latest Figma Make export

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "موقع الكتروني بتصميم مشابه",
+      "name": "منصة الوظائف",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
