--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
           "class-variance-authority": "^0.7.1",
           "clsx": "*",
           "cmdk": "^1.1.1",
+          "docx": "*",
           "embla-carousel-react": "^8.6.0",
           "hono": "*",
           "input-otp": "^1.4.2",
+          "jspdf": "*",
           "lucide-react": "^0.487.0",
+          "mammoth": "*",
+          "motion": "*",
           "next-themes": "^0.4.6",
           "react": "^18.3.1",
           "react-day-picker": "^8.10.1",
